Added new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/prescriptions.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/prescriptions.html
@@ -25,7 +25,7 @@
 	 */
 	userObj.name = "Elena Ivanova";
 	userObj.prescriptions.push({"date":'2013-01-12', 'notes':'Sleeping problems', 'medicine':{'name':'Medicine_1', 'how':'7 days x 3 pills'}});
-	userObj.prescriptions.push({"date":'2013-12-15', 'notes':'Sleeping problems', 'medicine':{'name':'Medicine_2', 'how':'7 days x 1 pills'}});
+	userObj.prescriptions.push({"date":'2013-12-15', 'notes':'Sleeping problems 2', 'medicine':{'name':'Medicine_2', 'how':'7 days x 1 pills'}});
 </script>
 <div class="cont">
 	<h1>universALL<br/>Medication Medical Service</h1>
@@ -50,9 +50,8 @@
 		</tr>
 	</table>
 
-	<input type="button" name="new_prescription" value="New prescription"
-	       onclick="document.location.href='prescription.html'"/>
-	<input type="button" name="back" value="Back" onclick="history.back()"/>
+	<button name="new_prescription">New prescription</button>
+	<button name="back">Back</button>
 
 </div>
 
