--- a/medication/medication.manager.servlet.ui/src/main/resources/user.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/user.html
@@ -1,39 +1,39 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xml:lang="en-gb" xmlns="http://www.w3.org/1999/xhtml" lang="en-gb">
 <head>
 
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>universALL - Medication Medical Service: User selection</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <title>universALL - Medication Medical Service: User selection</title>
 
-	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 
-	<script type="text/javascript" src="js/user.js"></script>
+    <script type="text/javascript" src="js/user.js"></script>
 
-	<link rel="stylesheet" href="css/common.css" type="text/css">
-	<link rel="stylesheet" href="css/user.css" type="text/css">
+    <link rel="stylesheet" href="css/common.css" type="text/css">
+    <link rel="stylesheet" href="css/user.css" type="text/css">
 </head>
 
 <body>
 <script type="text/javascript">
-	/*In for cycle - add all users, example:
-	 users.push({'id':'user1', "name": "User Name"});
+    /*In for cycle - add all users, example:
+     users.push({'id':'user1', "name": "User Name"});
 
-	users.push({'id':'user1', "name":"Elena Ivanova"});
-	users.push({'id':'user2', "name":"Polq Ivanova"});*/
+     users.push({'id':'user1', "name":"Elena Ivanova"});
+     users.push({'id':'user2', "name":"Polq Ivanova"});*/
 </script>
 
 <div class="cont">
-	<h1>universALL<br/>Medication Medical Service</h1>
+    <h1>universALL<br/>Medication Medical Service</h1>
 
-	<form action="prescriptions.html" method="post">
-		<label>Select a user to process</label>
-		<select name="user">
-			<option value="userID">user name</option>
-		</select>
-		<input type="submit" name="process_user" value="Process user"/>
-		<input type="button" name="back" value="Back" onclick="history.back()"/>
-	</form>
+    <form action="prescriptions.html" method="post">
+        <label>Select a user to process</label>
+        <select name="user">
+            <option value="userID">user name</option>
+        </select>
+        <input type="submit" name="process_user" value="Process user"/>
+        <button name="back">Back</button>
+    </form>
 </div>
 
 </body>
