--- a/medication/medication.manager.servlet.ui/src/main/resources/prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/prescription.html
@@ -15,13 +15,13 @@
 
 <body>
 <script type="text/javascript">
-	/*Add date and notes if are post after save medicine*/
+	/*Add date and notes if are post after save medicine
 	prescriptionObj.date = '2013-01-12';
 	prescriptionObj.notes = 'Sleeping problems';
 	//for - add all medicines, example:
 	//prescriptionObj.medicines[]={'id':'med1', 'name':'Medicine_1', 'description':'bla bla', 'side_effects':'sleeping problems','incompliances':'alcohol', 'days':7,'hours':[1, 22, 24]};
 	prescriptionObj.medicines.push({'id':'med1', 'name':'Medicine_1', 'description':'bla bla', 'side_effects':'sleeping problems', "incompliances":'alcohol', 'days':7, 'hours':[1, 22, 24]});
-	prescriptionObj.medicines.push({'id':'med2', 'name':'Medicine_2', 'description':'bla bla', 'side_effects':"make sleapy<br/>shuld not drive", "incompliances":'', 'days':1, 'hours':[10, 22]});
+	prescriptionObj.medicines.push({'id':'med2', 'name':'Medicine_2', 'description':'bla bla', 'side_effects':"make sleapy<br/>shuld not drive", "incompliances":'', 'days':1, 'hours':[10, 22]});*/
 </script>
 <div class="cont">
 	<h1>universALL<br/>Medication Medical Service</h1>
