--- a/medication/medication.manager.servlet.ui/src/main/resources/login.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/login.html
@@ -17,10 +17,10 @@
 <div class="cont">
 	<h1>universALL<br/>Medication Medical Service</h1>
 
-	<form action="user.html" method="post">
-		<input type="text" name="username" value="username"></input>
-		<input type="password" name="password" value="password"></input>
-		<input type="submit" name="login" value="Login"></input>
+	<form action="login" method="post">
+		<input type="text" name="username" value="username"/>
+		<input type="password" name="password" value="password"/>
+		<input type="submit" name="login" value="Login"/>
 	</form>
 </div>
 
