--- a/medication/medication.manager.servlet.ui/src/main/resources/prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/prescription.html
@@ -28,7 +28,7 @@
 
 	<h2>New perscription details</h2>
 
-	<form action="prescriptions.html" method="post">
+	<form action="/" method="post">
 		<label>Intake<br/>start date</label>
 		<input type="text" name="date"/>
 		<label>Notes</label>
@@ -68,9 +68,9 @@
 			</tr>
 		</table>
 		<input type="button" name="add_medicine" value="Add medicine"
-		       onclick="document.location.href='medicine.html'"></input>
-		<input type="submit" name="save_perscription" value="Save Perscription"></input>
-		<input type="button" name="back" value="Cancel" onclick="history.back()"></input>
+		       onclick="document.location.href='medicine.html'"/>
+		<input type="submit" name="save_perscription" value="Save Perscription"/>
+		<input type="button" name="back" value="Cancel" onclick="history.back()"/>
 	</form>
 
 </div>
