--- a/medication/medication.manager.servlet.ui/src/main/resources/prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/prescription.html
@@ -28,7 +28,7 @@
 
 	<h2>New perscription details</h2>
 
-	<form action="/" method="post">
+	<form action="/handle_new_prescription" method="post">
 		<label>Intake<br/>start date</label>
 		<input type="text" name="date"/>
 		<label>Notes</label>
