--- a/medication/medication.manager.servlet.ui/src/main/resources/user.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/user.html
@@ -24,7 +24,7 @@
 	users.push({'id':'user2', "name":"Polq Ivanova"});*/
 </script>
 
-<div class="cont">
+<div class="cont"><div>
 	<h1>universALL<br/>Medication Medical Service</h1>
 
 	<form name="prescriptions" action="" method="post">
@@ -32,10 +32,10 @@
 		<select name="user">
 			<option value="userID">user name</option>
 		</select>
-		<input type="submit" name="process_user" value="Process user"/>
-		<button name="back">Back</button>
+		<input type="submit" class="button left" name="process_user" value="Process user"/>
+		<button name="back" class="right">Log out</button>
 	</form>
-</div>
+</div></div>
 
 </body>
 </html>
