add new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/error.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/error.html
@@ -20,11 +20,11 @@
 
 <body>
 <script type="text/javascript">
-//	var errorMsg = "bla bla";
+	var errorMsg = "bla bla";
 </script>
 <div class="cont">
 	<div>
-		<h1></h1>
+		<h1>universAAL<br/>Medication Medical Service</h1>
 
 		<h2>Error occurred:</h2>
 
