--- a/medication/medication.manager.servlet.ui/src/main/resources/user.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/user.html
@@ -19,13 +19,13 @@
 <script type="text/javascript">
 	/*In for cycle - add all users, example:
 	 users.push({'id':'user1', "name": "User Name"});
-
+	 */
 	users.push({'id':'user1', "name":"Elena Ivanova"});
-	users.push({'id':'user2', "name":"Polq Ivanova"});*/
+	users.push({'id':'user2', "name":"Polq Ivanova"});
 </script>
 
 <div class="cont"><div>
-	<h1>universALL<br/>Medication Medical Service</h1>
+	<h1>universAAL<br/>Medication Medical Service</h1>
 
 	<form name="prescriptions" action="" method="post">
 		<label>Select a user to process</label>
