--- a/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
@@ -19,34 +19,37 @@
 	/*Add date and notes if are post after save medicine*/
 
 	/*The medicine object
-	 - for new medicine, set only id
-	 -for edit medicine, set all data, example:
-	medicineObj = {'id':'med1', 'name':'Medicine name 1 that is too long', 'description':'bla bla', 'side_effects':'sleeping problems', "incompliances":'alcohol', 'days':7, 'hours':[1,13, 22, 24]};
-	isNew = false;//add ths if edit medicine*/
+	 - for new medicine, set only id, prescriptionId
+	 -for edit medicine, set all data, example:*/
+	medicineObj = {'id':'med1','prescriptionId':'', 'name':'Medicine name 1 that is too long', 'description':'We recommend against using this property; please try to use feature detection instead (see jQuery.support). jQuery.browser may be moved to a plugin in a future release of jQuery.', 'side_effects':'sleeping problems', "incompliances":'alcohol', 'days':7, 'hours':[1,13, 22, 24]};
+	isNew = false;//add ths if edit medicine
 </script>
-<div class="cont">
-	<h1>universALL<br/>Medication Medical Service</h1>
+<div class="cont"><div>
+	<h1>universAAL<br/>Medication Medical Service</h1>
 
 	<h2>Add medicine</h2>
 
 	<form name="save_medicine" action="" method="post">
 
-		<table id="medicine">
+		<table id="medicine" class="t1">
 			<tr>
 				<th>Medicine Name</th>
-				<td><input type="text" name="name"/></td>
+				<td>
+						<input type="hidden" name="id">
+						<input type="hidden" name="prescriptionId">
+						<input type="text" name="name"/></td>
 			</tr>
 			<tr>
 				<th>Description</th>
-				<td><textarea name="description" rows="3" cols="50"></textarea></td>
+				<td><textarea name="description" rows="3"></textarea></td>
 			</tr>
 			<tr>
 				<th>Side Effects</th>
-				<td><textarea name="side_effects" rows="3" cols="50"></textarea></td>
+				<td><textarea name="side_effects" rows="3"></textarea></td>
 			</tr>
 			<tr>
 				<th>Incompliances</th>
-				<td><textarea name="incompliances" rows="3" cols="50"></textarea></td>
+				<td><textarea name="incompliances" rows="3"></textarea></td>
 			</tr>
 			<tr>
 				<th>Days to be taken</th>
@@ -54,19 +57,19 @@
 			</tr>
 		</table>
 
-		<table class="days">
+		<table class="t1 days">
 			<tr>
-				<td rowspan="2">Intake hours<input type="hidden" name="hours"/></td>
+				<th rowspan="2">Intake<br/>hours<input type="hidden" name="hours"/></th>
 			</tr>
 			<tr></tr>
 		</table>
 
 
 		<input type="submit" name="save_medicine" value="Save Medicine"/>
-		<button name="back">Cancel</button>
+		<button name="back" class="right">Cancel</button>
 	</form>
 
-</div>
+</div></div>
 
 </body>
 </html>
