--- a/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
@@ -17,30 +17,34 @@
 <body>
 <script type="text/javascript">
 	/*Add date and notes if are post after save medicine*/
-	prescriptionObj.date = '2013-01-12';
-	prescriptionObj.notes = 'Sleeping problems';
-	//for - add all medicines, example:
+	prescriptionObj.id = 'p1';
+	 prescriptionObj.date = '2013-01-12';
+	 prescriptionObj.notes = 'Sleeping problems';
+	 //for - add all medicines, example:
 	//prescriptionObj.medicines[]={'id':'med1', 'name':'Medicine_1', 'description':'bla bla', 'side_effects':'sleeping problems','incompliances':'alcohol', 'days':7,'hours':[1, 22, 24]};
 	prescriptionObj.medicines.push({'id':'med1', 'name':'Medicine_1', 'description':'bla bla', 'side_effects':'sleeping problems', "incompliances":'alcohol', 'days':7, 'hours':[1, 22, 24]});
-	prescriptionObj.medicines.push({'id':'med2', 'name':'Medicine_2', 'description':'bla bla', 'side_effects':"make sleapy<br/>shuld not drive", "incompliances":'', 'days':1, 'hours':[10, 22]});
+	prescriptionObj.medicines.push({'id':'med2', 'name':'Medicine_2', 'description':'bla bla', 'side_effects':"make sleapy<br/>shuld not drive", "incompliances":'', 'days':60, 'hours':[10, 22]});
 </script>
 <div class="cont">
 	<div>
-		<h1>universALL<br/>Medication Medical Service</h1>
+		<h1>universAAL<br/>Medication Medical Service</h1>
 
 		<h2>New perscription details</h2>
 
 		<form name="save_prescription" action="" method="post">
-			<table><tr>
-			<td class="date" nowrap>
-				<label>Intake start date</label>
-				<input type="text" name="date"/>
-			</td>
-			<td class="notes">
-			<label>Notes</label>
-			<textarea type="text" name="notes" rows="1"></textarea>
-			</td>
-				</tr></table>
+			<table>
+				<tr>
+					<td class="date" nowrap>
+						<label>Intake start date</label>
+						<input type="hidden" name="prescriptionId"/>
+						<input type="text" name="date"/>
+					</td>
+					<td class="notes">
+						<label>Notes</label>
+						<textarea type="text" name="notes" rows="1"></textarea>
+					</td>
+				</tr>
+			</table>
 			<table id="prescription" class="t1">
 				<tr>
 					<th>Medicine Name</th>
@@ -49,35 +53,41 @@
 					<th>Incompliances</th>
 					<th></th>
 				</tr>
-				<tr>
-					<td colspan="5">No medicines</td>
+				<tr class="odd">
+					<td colspan="5" align="center">No medicines</td>
 				</tr>
-				<tr class="templ1">
+				<tr class="templ1" style="display:none">
 					<td></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td><div></div></td>
-					<td class="mid">
+					<td>
+						<div></div>
+					</td>
+					<td>
+						<div></div>
+					</td>
+					<td>
+						<div></div>
+					</td>
+					<td class="action">
 						<button name="edit">Edit</button>
 					</td>
 				</tr>
-				<tr class="templ2">
+				<tr class="templ2" style="display:none">
 					<td colspan="4">
 						<table class="days">
 							<tr>
-								<td rowspan="2"></td>
+								<td rowspan="2">&nbsp;</td>
 							</tr>
 							<tr></tr>
 						</table>
 					</td>
-					<td class="mid">
+					<td class="action">
 						<button name="delete">Delete</button>
 					</td>
 				</tr>
 			</table>
 			<button name="add_medicine">Add medicine</button>
-			<input type="submit" name="save_perscription" value="Save Perscription"/>
-			<button name="back">Cancel</button>
+			<input type="submit" name="save_perscription" value="Save Perscription" class="button"/>
+			<button name="back" class="right">Cancel</button>
 		</form>
 
 	</div>
