add new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/error.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/error.html
@@ -20,7 +20,7 @@
 
 <body>
 <script type="text/javascript">
-	var errorMsg = "bla bla";
+//	var errorMsg = "bla bla";
 </script>
 <div class="cont">
 	<div>
