--- a/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
@@ -20,9 +20,9 @@
 
 	/*The medicine object
 	 - for new medicine, set only id, prescriptionId
-	 -for edit medicine, set all data, example:*/
+	 -for edit medicine, set all data, example:
 	medicineObj = {'id':'med1','prescriptionId':'', 'name':'Medicine name 1 that is too long', 'description':'We recommend against using this property; please try to use feature detection instead (see jQuery.support). jQuery.browser may be moved to a plugin in a future release of jQuery.', 'side_effects':'sleeping problems', "incompliances":'alcohol', 'days':7, 'hours':[1,13, 22, 24]};
-	isNew = false;//add ths if edit medicine
+	isNew = false;//add ths if edit medicine*/
 </script>
 <div class="cont"><div>
 	<h1>universAAL<br/>Medication Medical Service</h1>
