--- a/medication/medication.manager.servlet.ui/src/main/resources/user.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/user.html
@@ -19,9 +19,9 @@
 <script type="text/javascript">
 	/*In for cycle - add all users, example:
 	 users.push({'id':'user1', "name": "User Name"});
-	 */
+
 	users.push({'id':'user1', "name":"Elena Ivanova"});
-	users.push({'id':'user2', "name":"Polq Ivanova"});
+	users.push({'id':'user2', "name":"Polq Ivanova"});*/
 </script>
 
 <div class="cont"><div>
