--- a/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
@@ -21,9 +21,9 @@
 	/*The medicine object
 	 - for new medicine, set only id, prescriptionId
 	 -for edit medicine, set all data, example:	*/
-	medicineObj.id='med1';
+/*	medicineObj.id='med1';
 	medicineObj.prescriptionId='p1';
- /**/
+
 	isNew = false;//add ths if edit medicine
 	medicineObj.name='Medicine name 1 that is too long';
 	medicineObj.description='We recommend against using this property; please try to use feature detection instead (see jQuery.support). jQuery.browser may be moved to a plugin in a future release of jQuery.';
@@ -33,7 +33,7 @@
 	medicineObj.dose=1;
 	medicineObj.unit='drops';
 	medicineObj.meal_relation='before';
-  medicineObj.hours=[1,13, 22, 24];
+  medicineObj.hours=[1,13, 22, 24];*/
 
 </script>
 <div class="cont"><div>
