add new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/error.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/error.html
@@ -19,9 +19,9 @@
 </head>
 
 <body>
-<script type="text/javascript">
-//	var errorMsg = "bla bla";
-</script>
+<!--<script type="text/javascript">
+	var errorMsg = "bla bla";
+</script>-->
 <div class="cont">
 	<div>
 		<h1>universAAL<br/>Medication Medical Service</h1>
