--- a/medication/medication.manager.servlet.ui/src/main/resources/login.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/login.html
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-
+<!--<script type="text/javascript">
+	isError=true;
+</script>-->
 <div class="cont"><div>
 	<h1>universAAL<br/>Medication Medical Service</h1>
 
 	<form name="user" action="" method="post">
-		<input type="text" name="username" value="us"/><br/>
-		<input type="password" name="password" value="pa"/><br/>
+		<input type="text" name="username" value="username"/><br/>
+		<input type="password" name="password" value="password"/><br/>
 		<input type="submit" name="login" value="Login" class="button"/>
 	</form>
 	<div class="error_msg" style="display: none">Wrong username and/or password</div>
