--- a/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
@@ -17,16 +17,16 @@
 </head>
 
 <body>
-<script type="text/javascript">
-	/*Add date and notes if are post after save medicine
+<!--<script type="text/javascript">
+	/*Add date and notes if are post after save medicine*/
 	prescriptionObj.id = 'p1';
 	 prescriptionObj.date = '2013-01-12';
 	 prescriptionObj.notes = 'Sleeping problems';
 	 //for - add all medicines, example:
 	//prescriptionObj.medicines[]={'id':'med1', 'name':'Medicine_1', 'description':'bla bla', 'side_effects':'sleeping problems','incompliances':'alcohol', 'days':7,'hours':[1, 22, 24]};
 	prescriptionObj.medicines.push({'id':'med1', 'name':'Medicine_1', 'description':'bla bla', 'side_effects':'sleeping problems', "incompliances":'alcohol', 'days':7, 'hours':[1, 22, 24]});
-	prescriptionObj.medicines.push({'id':'med2', 'name':'Medicine_2', 'description':'bla bla', 'side_effects':"make sleapy<br/>shuld not drive", "incompliances":'', 'days':60, 'hours':[10, 22]});*/
-</script>
+	prescriptionObj.medicines.push({'id':'med2', 'name':'Medicine_2', 'description':'bla bla', 'side_effects':"make sleapy<br/>shuld not drive",  'days':60, 'hours':[10, 22]});
+</script>-->
 <div class="cont">
 	<div>
 		<h1>universAAL<br/>Medication Medical Service</h1>
