--- a/medication/medication.manager.servlet.ui/src/main/resources/user.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/user.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	/*In for cycle - add all users, example:
 	 users.push({'id':'user1', "name": "User Name"});
-
+	 */
 	users.push({'id':'user1', "name":"Elena Ivanova"});
-	users.push({'id':'user2', "name":"Polq Ivanova"});*/
-</script>
+	users.push({'id':'user2', "name":"Polq Ivanova"});
+</script>-->
 
 <div class="cont"><div>
 	<h1>universAAL<br/>Medication Medical Service</h1>
