--- a/medication/medication.manager.servlet.ui/src/main/resources/prescriptions.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/prescriptions.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	/*
 	 define user name, example:
 	 userObj.name="User Name";
@@ -25,7 +25,7 @@
 	 userObj.prescriptions.push({"date":'2013-01-12',
 	 'notes':'Sleeping problems',
 	 'medicines':[{'name':'Medicine_2', 'how':'7 days x 1 pills'},{'name':'Medicine_1', 'how':'7 days x 3 pills'}]});
-
+	 */
 	userObj.name = "Elena Ivanova";
 	userObj.prescriptions.push({"date":'2013-01-12',
 		'notes':' We recommend against using this property; please try to use feature detection instead (see jQuery.support). jQuery.browser may be moved to a plugin in a future release of jQuery.',
@@ -37,8 +37,8 @@
 		'medicines':[
 			{'name':'Medicine_2_1', 'how':'7 days x 1 pills'},
 			{'name':'Medicine_2_2', 'how':'5 days x 3 pills'}
-		]});*/
-</script>
+		]});
+</script>-->
 <div class="cont">
 	<div>
 		<h1>universAAL<br/>Medication Medical Service</h1>
