add new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
@@ -71,7 +71,7 @@
 				<td><input type="text" name="days" size="3"/></td>
 			</tr>
 			<tr>
-				<th>Dose</th>
+				<th>Dose per intake</th>
 				<td>
 					<input type="text" name="dose" size="3"/>
 				  <input type="radio" id="pills" name="unit" value="pills"/> <label for="pills">pills</label>
