add new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
@@ -74,7 +74,7 @@
 				<th>Dose per intake</th>
 				<td>
 					<input type="text" name="dose" size="3"/>
-				  <input type="radio" id="pills" name="unit" value="pills"/> <label for="pills">pills</label>
+				  <input type="radio" id="pills" name="unit" value="pills" checked/> <label for="pills">pills</label>
 					<input type="radio" id="drops" name="unit" value="drops"/> <label for="drops">drops</label>
 					<select name="meal_relation">
 					</select>
