add new code and resources

--- a/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/medicine.html
@@ -91,7 +91,8 @@
 
 
 		<input type="submit" name="save_medicine" value="Save Medicine" class="button"/>
-		<button name="back" class="right">Cancel</button>
+		<button name="delete" class="right">Delete</button>
+        <button name="back" class="right">Cancel</button>
 	</form>
 
 </div></div>
