--- a/medication/medication.manager.servlet.ui/src/main/resources/login.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/login.html
@@ -22,8 +22,8 @@
 	<h1>universAAL<br/>Medication Medical Service</h1>
 
 	<form name="user" action="" method="post">
-		<input type="text" name="username" value="us"/><br/>
-		<input type="password" name="password" value="pa"/><br/>
+		<input type="text" name="username" value=""/><br/>
+		<input type="password" name="password" value=""/><br/>
 		<input type="submit" name="login" value="Login" class="button"/>
 	</form>
 	<div class="error_msg" style="display: none">Wrong username and/or password</div>
