fixed bug with the new lines and single quotes and started development of the new features

--- a/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/new_prescription.html
@@ -61,13 +61,13 @@
 				<tr class="templ1" style="display:none">
 					<td></td>
 					<td>
-						<div></div>
+						<textarea readonly></textarea>
 					</td>
 					<td>
-						<div></div>
+						<textarea readonly></textarea>
 					</td>
 					<td>
-						<div></div>
+						<textarea readonly></textarea>
 					</td>
 					<td class="action">
 						<button name="edit">Edit</button>
