--- a/medication/medication.manager.servlet.ui/src/main/resources/prescriptions.html
+++ b/medication/medication.manager.servlet.ui/src/main/resources/prescriptions.html
@@ -56,7 +56,7 @@
 			<tr class="templ">
 				<td nowrap></td>
 				<td class="notes">
-					<div></div>
+					<textarea readonly></textarea>
 				</td>
 				<td class="medicine" nowrap>
 					<div>
