added code related to the user_management and added all web resources (html, js, css)

--- a/medication/medication.manager.servlet.ui.configuration/src/main/resources/user_management.html
+++ b/medication/medication.manager.servlet.ui.configuration/src/main/resources/user_management.html
@@ -16,15 +16,11 @@
 </head>
 
 <body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
     /*
-     define user name, example:
-     userObj.name="User Name";
-
-     In for cycle - add all prescriptions, Example:
-     userObj.prescriptions.push({"date":'2013-01-12',
-     'notes':'Sleeping problems',
-     'medicines':[{'name':'Medicine_2', 'how':'7 days x 1 pills'},{'name':'Medicine_1', 'how':'7 days x 3 pills'}]});
+     define objects to fill selects - patients, physicians,caregivers, dispensers (<id>:<name>),
+      and array of users objects
+     Example:
      */
     patients = {"111":"John Smith", "id2":"Sarah Smith"};//id:name
     physicians = {"2":'Dr Petters', "3":'Dr Williams'};
@@ -46,7 +42,7 @@
             "alerts":{"due":false, "missed":true, "successful":true, "upside":false}
         }
     ];
-</script>
+</script>-->
 <div class="cont">
     <div>
         <h1>universAAL<br/>Medication Manager Service<br/>
