--- a/medication/medication.manager.servlet.ui.configuration/src/main/resources/login.html
+++ b/medication/medication.manager.servlet.ui.configuration/src/main/resources/login.html
@@ -22,8 +22,8 @@
 	<h1>universAAL<br/>Medication Manager Service</h1>
 
 	<form name="user" action="" method="post">
-		<input type="text" name="username" value="username"/><br/>
-		<input type="password" name="password" value="password"/><br/>
+		<input type="text" name="username" value="admin"/><br/>
+		<input type="password" name="password" value="admin"/><br/>
 		<input type="submit" name="login" value="Login" class="button"/>
 	</form>
 	<div class="error_msg" style="display: none">Wrong username and/or password</div>
