added alerts to the Dispenser entity. Removed disabled from the user_management.html for patient in order to post parameter id

--- a/medication/medication.manager.servlet.ui.configuration/src/main/resources/user_management.html
+++ b/medication/medication.manager.servlet.ui.configuration/src/main/resources/user_management.html
@@ -78,7 +78,7 @@
             <fieldset style="display: none">
                 <legend>Edit</legend>
                 <div class="col">
-                    <span><label for="patient">Patient:</label> <select name="patient" id="patient" disabled></select></span>
+                    <span><label for="patient">Patient:</label> <select name="patient" id="patient"></select></span>
                     <span><label for="physician">Physician:</label> <select name="physician" id="physician"></select></span>
                     <span><label for="caregiver">Caregiver:</label> <select name="caregiver" id="caregiver"></select></span>
                     <span><label for="dispenser">Dispenser:</label> <select name="dispenser" id="dispenser"></select></span>
