Implemented display all properties in web page

--- a/medication/medication.manager.servlet.ui.configuration/src/main/resources/parameters.html
+++ b/medication/medication.manager.servlet.ui.configuration/src/main/resources/parameters.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-<script type="text/javascript">
+<!--<script type="text/javascript">
     /*
      define parameters, example:
      */
@@ -52,7 +52,7 @@
         }
 
     };
-</script>
+</script>-->
 <div class="cont">
     <div>
         <h1>universAAL<br/>Medication Manager Service<br/>
